--- a/apps/libcamera_usb/firmware/src/config/imx219_mipi_csi_isc_usb_msd/imx219_mipi_csi_isc_usb_msd.mhc/settings.yml
+++ b/apps/libcamera_usb/firmware/src/config/imx219_mipi_csi_isc_usb_msd/imx219_mipi_csi_isc_usb_msd.mhc/settings.yml
@@ -2,7 +2,7 @@ format_version: v1.0
 configName: imx219_mipi_csi_isc_usb_msd
 folderName: libcamera_usb_sama7g54_ek
 frameworkPath: C:\harmony
-processor: SAMA7G54
+processor: SAMA7G54D4G
 projectName: libcamera_usb_sama7g54_ek
 settings:
   PackageFilter: ''
@@ -11,4 +11,4 @@ settings:
   TRUSTZONE: 'false'
   CMSISPath: dev_packs\arm\CMSIS\5.8.0
   MERGE_STRATEGY: USER_ALL
-  DFPPath: dev_packs\Microchip\SAMA7G5_DFP\1.2.178\atdf\SAMA7G54.atdf
+  DFPPath: dev_packs\Microchip\SAMA7G5_DFP\1.2.178\atdf\SAMA7G54D4G.atdf
