MH3-88824: generate offline docs for vision.3.1.0 release
Signed-off-by: Sandeep Sheriker Mallikarjun <sandeep.sheriker@microchip.com>

--- a/docs/package.yml
+++ b/docs/package.yml
@@ -1,14 +1,23 @@
 package:
   format-version: "1.0.0"
   name: "vision"
-  version: "3.0.0"
+  version: "3.1.0"
   type: "api"
   status: "production"
 
   dependencies:
     - name: "core"
       type: "package"
-      version: "3.11.1"
+      version: "3.13.2"
     - name: "gfx"
       type: "package"
-      version: "3.13.0"
+      version: "3.14.0"
+    - name: "usb"
+      type: "package"
+      version: "3.12.0"
+    - name: "bsp"
+      type: "package"
+      version: "3.17.0"
+    - name: "csp"
+      type: "package"
+      version: "3.18.2"
