--- a/package.xml
+++ b/package.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <Package name="Vision">
     <Dependencies>
-        <Dependency name="core" version="v3.11.1"/>
-        <Dependency name="gfx" version="v3.13.0"/>
+        <Dependency name="core" version="v3.13.2"/>
+        <Dependency name="bsp" version="v3.17.0"/>
+        <Dependency name="csp" version="v3.18.2"/>
+	<Dependency name="gfx" version="v3.14.0"/>
+	<Dependency name="usb" version="v3.12.0"/>
     </Dependencies>
 </Package>
