--- a/docs/package.yml
+++ b/docs/package.yml
@@ -1,23 +1,23 @@
 package:
   format-version: "1.0.0"
   name: "vision"
-  version: "3.1.0"
+  version: "v3.1.0"
   type: "api"
   status: "production"
 
   dependencies:
     - name: "core"
       type: "package"
-      version: "3.13.2"
+      version: "v3.13.2"
     - name: "gfx"
       type: "package"
-      version: "3.14.0"
+      version: "v3.14.0"
     - name: "usb"
       type: "package"
-      version: "3.12.0"
+      version: "v3.12.0"
     - name: "bsp"
       type: "package"
-      version: "3.17.0"
+      version: "v3.17.0"
     - name: "csp"
       type: "package"
-      version: "3.18.2"
+      version: "v3.18.2"
